<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<FrameLayout 
    
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="wrap_content"
    android:background="#B3B0B0"
    tools:context=".UpdateProfile" >

     <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:background="@drawable/basebg" >
            
     <LinearLayout
	        android:id="@+id/linearLayout2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/loginbg"
	    	android:gravity="bottom"
	        android:orientation="vertical">
	        
         <!-- ******************************************************* -->
             <LinearLayout
		        android:id="@+id/linearLayout3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:background="@drawable/imageborder"
		        android:orientation="horizontal"
		        android:paddingBottom="0dp"
		        android:paddingTop="0dp"
		        android:shadowColor="#333333"
		        android:shadowDx="2.0"
		        android:shadowDy="2.0"
		        android:shadowRadius="3.0" 
		        android:radius="10dip">
	   			<ImageButton
		            android:contentDescription="@string/desc"
				    android:id="@+id/ImageButton01"
				    android:layout_width="180dp"
				    android:layout_height="170dp"
				    android:src="@drawable/defaultprofile"
				    android:background = "@drawable/loginbg"
				    android:drawableTop="@drawable/ic_action_new_picture"
				    android:scaleType="centerCrop"
				    android:onClick="pickimage" />
	   			
	   			<LinearLayout
            android:layout_weight="1"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
			android:paddingTop="5dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/iamfrom"
                android:textColor="#F2F2F2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/MyHomeTown"
		       android:inputType="text"/>

            <EditText
                android:id="@+id/iamlivingin"
                android:textColor="#F2F2F2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/MyCurrentCity"
		       android:inputType="text"/>
            
            <EditText
		       android:id="@+id/myprofession"
		       android:textColor="#F2F2F2"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:hint="@string/MyProfession"
		       android:inputType="text" />
            <EditText
		       android:id="@+id/iworkat"
		       android:textColor="#F2F2F2"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:hint="@string/IWorkAt"
		       android:inputType="text" />
        </LinearLayout>
	   			
   </LinearLayout>
   			<!-- ******************************************************* -->
   			<EditText
			       android:id="@+id/hobbies"
			       android:textColor="#F2F2F2"
			       android:layout_width="match_parent"
			       android:layout_height="wrap_content"
			       android:ems="10"
			       android:hint="@string/Hobbies"
			       android:inputType="text" > 
	   			</EditText>
	   			<EditText
			       android:id="@+id/music"
			       android:textColor="#F2F2F2"
			       android:layout_width="match_parent"
			       android:layout_height="wrap_content"
			       android:ems="10"
			       android:hint="@string/Music"
			       android:inputType="text" > 
	   			</EditText>

		   <EditText
		       android:id="@+id/movies"
		       android:textColor="#F2F2F2"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:ems="10"
		       android:hint="@string/Movies"
		       android:inputType="text" />

		   <EditText
		       android:id="@+id/books"
		       android:textColor="#F2F2F2"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:ems="10"
		       android:hint="@string/Books"
		       android:inputType="text" />
		   
		   <EditText
                android:id="@+id/MyPassion"
                android:textColor="#F2F2F2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/MyPassion"
		        android:inputType="text"/>

		   <EditText
			    android:id="@+id/AboutMe"
			    android:textColor="#F2F2F2"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:lines="5"
			    android:inputType="textMultiLine"
			    android:hint="@string/AboutMe"
			    android:scrollHorizontally="false" />
		   <LinearLayout
		        android:id="@+id/linearLayout4"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:background="@drawable/loginbg"
		    	android:gravity="bottom"
		        android:orientation="horizontal"
		        android:paddingBottom="5dp"
		        android:paddingTop="5dp"
		        android:shadowColor="#333333"
		        android:shadowDx="2.0"
		        android:shadowDy="2.0"
		        android:shadowRadius="3.0" 
		        android:radius="10dip">
   			</LinearLayout> 
   			
	        <Button
		        android:id="@+id/button3"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:background = "@drawable/buttonclicker"
		        android:textColor="#4E4E4E"
		        android:textSize="12sp"
		        android:textStyle="bold"
		        android:text="@string/Update" 
		        android:onClick="UpdateUserProfile"/>
              
         </LinearLayout>   
    
    </RelativeLayout>

</FrameLayout>
</ScrollView>