<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="${packageName}.${activityClass}" >

    <!--  ******************************************************************  User Basic Profile data -->

    <LinearLayout
        android:id="@+id/Profiledata"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5F04B4"
        android:gravity="top"
        android:orientation="horizontal" >
        
        <LinearLayout
            android:layout_width="0dip"
			android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="#424242"
            android:paddingLeft="5dp"
            android:orientation="vertical" >
               
        <ImageButton
            android:id="@+id/ProfileImage"
            android:layout_width="150dp"
			android:layout_height="140dp"
			android:gravity="center"
			android:src="@drawable/defaultprofile"
			android:background = "@drawable/loginbg"
			android:scaleType="centerCrop"
            android:contentDescription="@string/desc" />
        </LinearLayout>
                

        <LinearLayout
            android:layout_width="0dip"
			android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
			android:paddingTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/FirstName"
                android:textColor="#F2F2F2"
                android:textSize="22sp"
                android:text="@string/Name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/LastName"
                android:textColor="#F2F2F2"
                android:textSize="22sp"
                android:text="@string/Name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/Profession"
                android:textColor="#F2F2F2"
                android:textSize="12sp"
                android:text="@string/StudentType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/Worksat"
                android:textColor="#F2F2F2"
                android:textSize="12sp"
                android:text="@string/Major"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/CurrentCity"
                android:textColor="#F2F2F2"
                android:textSize="12sp"
                android:text="@string/Gender"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            
        </LinearLayout>
         
    </LinearLayout>
    
    <!--  ******************************************************************  User Basic Profile data -->
    
     
    <!-- ******************************************************************** Action Buttons          -->
    <ScrollView
    android:id="@+id/Scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@+id/Profiledata">
    <LinearLayout
        android:id="@+id/ActionButtons"
        style="?android:attr/buttonBarStyle"
        android:background="#F2F2F2"
        android:paddingTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- About Me -->
        <TextView
                android:id="@+id/AboutMeLable"
                android:textColor="#424242"
                android:textSize="16sp"
                android:text="@string/AboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <TextView
                android:id="@+id/AboutMe"
                android:textColor="#5F04B4"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:text="@string/AboutMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
       <!-- *************************************** -->
       <!-- Hobbies -->
       <TextView
                android:id="@+id/HobbiesLable"
                android:textColor="#424242"
                android:textSize="16sp"
                android:paddingTop="7dp"
                android:text="@string/Hobbies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/Hobbies"
                android:textColor="#5F04B4"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:text="@string/Hobbies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
       <!-- *************************************** -->
       <!-- Music -->
       <TextView
                android:id="@+id/MusicLable"
                android:textColor="#424242"
                android:textSize="16sp"
                android:paddingTop="7dp"
                android:text="@string/Music"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/Music"
                android:textColor="#5F04B4"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:text="@string/Music"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
       <!-- *************************************** -->
       <!-- Movies -->
       <TextView
                android:id="@+id/MoviesLable"
                android:textColor="#424242"
                android:textSize="16sp"
                android:paddingTop="7dp"
                android:text="@string/Movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/Movies"
                android:textColor="#5F04B4"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:text="@string/Movies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
       <!-- *************************************** -->
       <!-- Books -->
       <TextView
                android:id="@+id/BooksLable"
                android:textColor="#424242"
                android:textSize="16sp"
                android:paddingTop="7dp"
                android:text="@string/Hobbies"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/Books"
                android:textColor="#5F04B4"
                android:paddingTop="2dp"
                android:textSize="14sp"
                android:text="@string/Books"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
       <!-- *************************************** -->
       <!-- Hobbies -->
       <TextView
                android:id="@+id/MyPassionLable"
                android:textColor="#424242"
                android:textSize="16sp"
                android:paddingTop="7dp"
                android:text="@string/MyPassion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        <TextView
                android:id="@+id/MyPassion"
                android:paddingTop="2dp"
                android:textColor="#5F04B4"
                android:textSize="14sp"
                android:text="@string/MyPassion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
       <!-- *************************************** -->
       </LinearLayout>
       </ScrollView>

</RelativeLayout>

